# cplusplus_exercise

./: README.md
ATrie_test/: .res.1.swp  .res.2.swp  2  array_trie.cpp  main.cpp  tags  trip_poicity.txt
atoi_test/: a.out  cscope.in.out  cscope.out  cscope.po.out  main.cpp  tags
boost_test/: main.cpp
bsearch_test/: a.out  main.cpp
delete_file_when_read_test/: a.out  main.cpp
double_trie/midatrie-0.3.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in  midatrie.lsm.in  midatrie.spec.in
double_trie/midatrie-0.3.3/mida/: Makefile.am  Makefile.in  atrie.h  imitrie.h  midatrie.h  twotrie.h
double_trie/midatrie-0.3.3/mida/atrie/: Makefile.am  Makefile.in  atrie.cxx  atrie.h
double_trie/midatrie-0.3.3/mida/imitrie/: Makefile.am  Makefile.in  imitrie.h  itrstate.h  triedefs.cxx  triedefs.h
double_trie/midatrie-0.3.3/mida/midatrie/: Makefile.am  Makefile.in  branches.cxx  branches.h  midadefs.h  midatrie.cxx  midatrie.h  tails.cxx  tails.h  twotrie.cxx  twotrie.h
double_trie/midatrie-0.3.3/mida/utils/: Makefile.am  Makefile.in  autoptr.h  avpair.cxx  avpair.h  booltype.h  cstring.cxx  cstring.h  fileutil.cxx  fileutil.h  hash.cxx  hash.h  hasher.h  hashtable.h  hexmanip.cxx  hexmanip.h  idcount.cxx  idcount.h  iter.h  list.h  listiter.h  pool.h  porting.cxx  porting.h  strex.h  strset.cxx  strset.h  strstrm.h  typedefs.h
double_trie/midatrie-0.3.3/mida/vmem/: Makefile.am  Makefile.in  dataheap.cxx  dataheap.h  heaplist.cxx  heaplist.h  pagemap.cxx  pagemap.h  vheap.cxx  vheap.h  vmem.cxx  vmem.h
double_trie/midatrie-0.3.3/mida/vmem/tests/: Makefile.am  Makefile.in  test-vheap.cxx  test-vmem.cxx
double_trie/midatrie-0.3.3/programs/: Makefile.am  Makefile.in  mida.cxx
double_trie/midatrie-0.3.3/tests/: Makefile.am  Makefile.in  idx1.cxx  idx1.h  idx2.cxx  idx2.h  idx3.cxx  idx3.h  idx4.cxx  idx4.h  test-atrie.cxx  test-midatrie.cxx  test-twotrie.cxx
dtrie/: a.out  cscope.in.out  cscope.out  cscope.po.out  main.cpp  tags
hash_map_test/: a.out  cscope.in.out  cscope.out  cscope.po.out  main.cpp  tags
ifstream_test/: a.out  main.cpp
ifstream_test/data/: slogan.txt
int2Str_test/: .main.cpp.swp  a.out  main.cpp
malloc_test/: main.cpp
perf_test/: a.out  btb_test.cpp  main.cpp  perf.data  perf.data.old
pmap_test/: a.out  main.cpp
pthread_test/: a.out  cscope.in.out  cscope.out  cscope.po.out  main.cpp  tags
splite_word_test/: a.out  char_test.cpp  cscope.in.out  cscope.out  cscope.po.out  locale_test.cpp  main.cpp  tags  wchar_test.cpp  xx.out
stack_heap_test/: main.cpp  main.s
str2word_test/: a.out  main.cpp
time_task_update_file/: a.out  data2.txt  main.cpp  result
trie_test/: 2_asc.txt  a.out  cscope.in.out  cscope.out  cscope.po.out  data.txt  load_trip_poicity.py  main.cpp  tags  trip_poicity.txt
trie_test_1/: .array_trie.cpp.swp  MakeFile  a.out  array_trie.cpp  array_trie.h  main.cpp  tags
utf8_test/: data.txt  main.cpp  x1  x2  x3  x_number
valgrind_test/: main.cpp
