MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

INCLUDES = -I$(srcdir) -I$(top_srcdir)

noinst_LTLIBRARIES = libimitrie.la

imitrieincludedir = $(includedir)/mida/imitrie
imitrieinclude_HEADERS = \
	imitrie.h \
	itrstate.h \
	triedefs.h

libimitrie_la_SOURCES = \
	triedefs.cxx \
	imitrie.h \
	itrstate.h \
	triedefs.h

