MAINTAINERCLEANFILES = $(srcdir)/Makefile.in

INCLUDES = -I$(srcdir) -I$(top_srcdir)

noinst_LTLIBRARIES = libutils.la

midautilsincludedir = $(includedir)/mida/utils
midautilsinclude_HEADERS = \
	booltype.h \
	cstring.h \
	fileutil.h \
	hasher.h \
	hash.h \
	hashtable.h \
	hexmanip.h \
	idcount.h \
	iter.h \
	list.h \
	listiter.h \
	pool.h \
	porting.h \
	strex.h \
	strset.h \
	strstrm.h \
	avpair.h \
	autoptr.h \
	typedefs.h

libutils_la_SOURCES = \
	cstring.cxx \
	fileutil.cxx \
	hash.cxx \
	hexmanip.cxx \
	idcount.cxx \
	porting.cxx \
	strset.cxx \
	avpair.cxx \
	booltype.h \
	cstring.h \
	fileutil.h \
	hasher.h \
	hash.h \
	hashtable.h \
	hexmanip.h \
	idcount.h \
	iter.h \
	list.h \
	listiter.h \
	pool.h \
	porting.h \
	strex.h \
	strset.h \
	strstrm.h \
	avpair.h \
	autoptr.h \
	typedefs.h

